[gd_scene load_steps=3 format=3 uid="uid://csax5pnb2h4jm"]

[ext_resource type="Script" path="res://scripts/ui/building_info_panel.gd" id="1_building_info_panel"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.15, 0.12, 0.1, 0.9)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.6, 0.5, 0.2, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
content_margin_left = 12.0
content_margin_top = 8.0
content_margin_right = 12.0
content_margin_bottom = 8.0

[node name="BuildingInfoPanel" type="Control"]
layout_mode = 3
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -200.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("1_building_info_panel")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Header" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="BuildingNameLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/Header"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 0.95, 0.9, 1)
theme_override_font_sizes/font_size = 24
text = "Farm"

[node name="TypeLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/Header"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.75, 0.7, 1)
theme_override_font_sizes/font_size = 14
text = "Gatherer"
horizontal_alignment = 2
vertical_alignment = 1

[node name="WorkersRow" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 36)
layout_mode = 2
theme_override_constants/separation = 12

[node name="WorkersIcon" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/WorkersRow"]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "üë•"
vertical_alignment = 1

[node name="WorkersLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/WorkersRow"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 0.95, 0.9, 1)
theme_override_font_sizes/font_size = 18
text = "Workers: 0/2"
vertical_alignment = 1

[node name="ProductionSection" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="SectionLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/ProductionSection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.85, 0.6, 1)
theme_override_font_sizes/font_size = 14
text = "Production"

[node name="OutputRow" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ProductionSection"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="OutputIcon" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/ProductionSection/OutputRow"]
custom_minimum_size = Vector2(24, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "üåæ"
vertical_alignment = 1

[node name="OutputTitle" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/ProductionSection/OutputRow"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.75, 0.7, 1)
theme_override_font_sizes/font_size = 14
text = "Output:"
vertical_alignment = 1

[node name="OutputLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/ProductionSection/OutputRow"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 0.95, 0.9, 1)
theme_override_font_sizes/font_size = 14
text = "Wheat"
vertical_alignment = 1

[node name="CycleRow" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ProductionSection"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="CycleIcon" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/ProductionSection/CycleRow"]
custom_minimum_size = Vector2(24, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "‚è±"
vertical_alignment = 1

[node name="CycleTitle" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/ProductionSection/CycleRow"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.75, 0.7, 1)
theme_override_font_sizes/font_size = 14
text = "Cycle:"
vertical_alignment = 1

[node name="CycleLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/ProductionSection/CycleRow"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 0.95, 0.9, 1)
theme_override_font_sizes/font_size = 14
text = "5.0s"
vertical_alignment = 1

[node name="StatusRow" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ProductionSection"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="StatusIcon" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/ProductionSection/StatusRow"]
custom_minimum_size = Vector2(24, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "üìä"
vertical_alignment = 1

[node name="StatusTitle" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/ProductionSection/StatusRow"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.75, 0.7, 1)
theme_override_font_sizes/font_size = 14
text = "Status:"
vertical_alignment = 1

[node name="StatusLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/ProductionSection/StatusRow"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 0.95, 0.9, 1)
theme_override_font_sizes/font_size = 14
text = "Idle (No Workers)"
vertical_alignment = 1
